--- a/WfhCountdown/Pages/Home.razor
+++ b/WfhCountdown/Pages/Home.razor
@@ -3,8 +3,7 @@
 <PageTitle>Home</PageTitle>
 
 <hgroup>
-  <h2>The WFH Countdown</h2>
-  <p>Start your timer</p>
+  <h2>WFH Countdown</h2>
 </hgroup>
 
 <Countdown />
